# ghstats

./: .gitignore  Cargo.toml  README.md  flake.nix
output/: 2015-01-01.json  2015-01-02.json  2015-01-03.json  2015-01-04.json  2015-01-05.json  2015-01-06.json  2015-01-07.json  2015-01-08.json  2015-01-09.json  2015-01-10.json  2015-01-11.json  2015-01-12.json  2015-01-13.json  2015-01-14.json  2015-01-15.json  2015-01-16.json  2015-01-17.json  2015-01-18.json  2015-01-19.json  2015-01-20.json  2015-01-21.json  2015-01-22.json  2015-01-23.json  2015-01-24.json  2015-01-25.json  2015-01-26.json  2015-01-27.json  2015-01-28.json  2015-01-29.json  2015-01-30.json  2015-01-31.json  2015-02-01.json  2015-02-02.json  2015-02-03.json  2015-02-04.json  2015-02-05.json  2015-02-06.json  2015-02-07.json  2015-02-08.json  2015-02-09.json  (+2875 more)
scripts/: analyze.sh  core.sh  download.sh  process.sh  run.sh
src/: collector.rs  loader.rs  loaders.rs  main.rs  output.json
stats/: 2015-01-01.json  2015-01-02.json  2015-01-03.json  2015-01-04.json  2015-01-05.json  2015-01-06.json  2015-01-07.json  2015-01-08.json  2015-01-09.json  2015-01-10.json  2015-01-11.json  2015-01-12.json  2015-01-13.json  2015-01-14.json  2015-01-15.json  2015-01-16.json  2015-01-17.json  2015-01-18.json  2015-01-19.json  2015-01-20.json  2015-01-21.json  2015-01-22.json  2015-01-23.json  2015-01-24.json  2015-01-25.json  2015-01-26.json  2015-01-27.json  2015-01-28.json  2015-01-29.json  2015-01-30.json  2015-01-31.json  2015-02-01.json  2015-02-02.json  2015-02-03.json  2015-02-04.json  2015-02-05.json  (+3960 more)
(+17 files in other folders)
