[package]
name = "ghstats"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Hallaine <alexandre@hallaine.com>"]
description = "Analyze GitHub language trends from GitHub Archive data"
license = "MIT"
repository = "https://github.com/alexandre-hallaine/ghstats"
keywords = ["github", "archive", "language", "trends", "analysis"]
categories = ["command-line-utilities", "data-processing"]

[dependencies]
flate2 = "1.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
