[package]
name = "ghstats"
version = "0.1.0"
edition = "2021"
authors = ["Alexandre Hallaine <alexandre@hallaine.com>"]
description = "Minimalist analytics for GitHub Archive data. Fast, parallel, and written in Rust."
license = "MIT"
repository = "https://github.com/alexandre-hallaine/ghstats"
homepage = "https://github.com/alexandre-hallaine/ghstats"
documentation = "https://github.com/alexandre-hallaine/ghstats#readme"
keywords = ["github", "archive", "statistics", "analytics", "data-processing"]
categories = ["command-line-utilities", "data-processing", "development-tools"]

[dependencies]
flate2 = "1.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
